services-behind-google-ingress-controller/20 - helloworld-v2.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld-v2-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld-v2
    spec:
      containers:
      - name: k8s-demo
        image: gcr.io/google_containers/echoserver:1.4
        ports:
        - containerPort: 8080
#      imagePullSecrets:
#      - name: my-docker-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v2
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: helloworld-v2
